--- a/style.css
+++ b/style.css
@@ -30,6 +30,11 @@ header > h1 {
 }
 .badge {
     background-color: bisque;
+    color:darkgreen;
+    
     font-size: 20px;
-    padding:2px;
+    padding:2px 10px;
+}
+#user-label {
+    position: absolute;
 }
