--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header > h1 {
     font-size: 40px;
     padding: 15px 20px;
     font-family:'Kanit', sans-serif;
+    position: relative;
 }
 .badge {
     background-color: bisque;
@@ -37,4 +38,18 @@ header > h1 {
 }
 #user-label {
     position: absolute;
+    top: 30px;
+    left: -25px;
+}
+#computer-label {
+    position: absolute;
+    top: 30px;
+    right: -30px;
+}
+.result {
+    font-size: 40px;
+    color: white;
+}
+.result > h1 {
+    text-align: center;
 }
