--- a/style.css
+++ b/style.css
@@ -50,6 +50,34 @@ header > h1 {
     font-size: 40px;
     color: white;
 }
-.result > h1 {
+.result > p {
     text-align: center;
+    font-weight: bold;
+    font-family: 'Kanit', sans-serif;
+
+}
+.choices{
+    text-align: center;
+    margin: 50px 0;
+
+}
+.choice {
+    border: 4px solid white;
+    border-radius: 60%;
+    margin: 0 20px;
+    padding: 10px;
+    display: inline-block;
+    transition: all .35s ease;
+
+}
+.choice:hover{
+    cursor: pointer;
+    background: slategray;
+}
+#action-message {
+    text-align: center;
+    color: white;
+    font-family: 'Kanit', sans-serif;
+    font-size: 20px;
+    margin-top: 20px;
 }
